--- a/index.html
+++ b/index.html
@@ -7,11 +7,17 @@
         <link rel="stylesheet" href="index.css">
         <script src="https://kit.fontawesome.com/30cb228668.js" crossorigin="anonymous"></script>
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"></script>
+
         <title>Frank Links</title>
+
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
+        
+        <link rel="apple-touch-icon" sizes="180x180" href="/pfp.webp" />
+        <link rel="icon" type="image/png" sizes="32x32" href="/pfp.webp" />
+        <link rel="icon" type="image/png" sizes="16x16" href="/pfp.webp" />
     </head>
     
     <body>
