--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
         
         <link rel="apple-touch-icon" sizes="180x180" href="/pfp.webp" />
-        <link rel="icon" type="image/png" sizes="32x32" href="/pfp.webp" />
-        <link rel="icon" type="image/png" sizes="16x16" href="/pfp.webp" />
+        <link rel="icon" type="image/webp" sizes="32x32" href="/pfp.webp" />
+        <link rel="icon" type="image/webp" sizes="16x16" href="/pfp.webp" />
     </head>
     
     <body>
