--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <i class="fab fa-discord"></i>
                     ⠀Discord
                 </a>
-                <a href="https://school.dypc.cc/stdams5" target="_blank">
+                <a href="https://frankk.uk/" target="_blank">
                     <i class="fas fa-rss"></i>
                     ⠀Blog
                 </a>
