--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="index.css">
-        <script src="https://kit.fontawesome.com/30cb228668.js" crossorigin="anonymous"></script>
-        <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"></script>
+        <script defer src="https://cdn.frankk.uk/static/js/all.min.js"></script>
 
         <title>Frank Links</title>
 
@@ -30,14 +29,14 @@
             <div class="links">
                 <div class="plinks">
                     <a>
-                        <p>一個可悲的學生，</br>同時也是個 <i class="fas fa-flag"></i> CTF Player兼開發者</p>
+                        <p>一個可悲的學生，</br>同時也是個 <i class="fa-solid fa-flag"></i> CTF Player兼開發者</p>
                     </a>
                 </div>
                 <h2>
-                    Social Links <i class="fas fa-link"></i> :
+                    Social Links <i class="fa-solid fa-link"></i> :
                 </h2>
                 <a href="https://instagram.com/frankkam1214" target="_blank">
-                    <i class="fab fa-instagram"></i>
+                    <i class="fa-brands fa-instagram"></i>
                     ⠀Instagram
                 </a>
                 <a href="https://instagram.com/frankkam1214" target="_blank">
@@ -45,32 +44,36 @@
                     ⠀Threads
                 </a>
                 <a href="https://github.com/Frank-Kam" target="_blank">
-                    <i class="fab fa-github"></i>
+                    <i class="fa-brands fa-github"></i>
                     ⠀GitHub
                 </a>
                 <a href="mailto:mail@frankk.uk" target="_blank">
-                    <i class="far fa-envelope"></i>
+                    <i class="fa-regular fa-envelope"></i>
                     ⠀Email
                 </a>
                 <a href="https://discord.com/users/988032182083805235" target="_blank">
-                    <i class="fab fa-discord"></i>
+                    <i class="fa-brands fa-discord"></i>
                     ⠀Discord
                 </a>
                 <a href="https://frankk.uk/" target="_blank">
-                    <i class="fas fa-rss"></i>
+                    <i class="fa-solid fa-rss"></i>
                     ⠀Blog
                 </a>
             </div>
             <div class="links">
                 <h2>
-                    Other Links <i class="fas fa-link"></i> :
+                    Other Links <i class="fa-solid fa-link"></i> :
                 </h2>
                 <a href="https://ctf.dypc.cc/" target="_blank">
-                    <i class="fas fa-school"></i>
+                    <i class="fa-solid fa-school"></i>
                     ⠀My School Club
                 </a>
+                <a href="https://status.frankk.uk/" target="_blank">
+                    <i class="fa-solid fa-signal"></i>
+                    ⠀Status
+                </a>
                 <a href="https://ic3dt3a.org/" target="_blank">
-                    <i class="fas fa-hat-cowboy"></i>
+                    <i class="fa-solid fa-hat-cowboy"></i>
                     ⠀ICDETEA CTF
                 </a>
             </div>
@@ -78,7 +81,7 @@
             <footer>
                <strong>
                 <small>
-                    <i class="far fa-copyright"></i> 2025-Presnt Frank Kam
+                    <i class="fa-regular fa-copyright"></i> 2025-Presnt Frank Kam
                 </small>
                </strong>
             </footer>
