add source code and cf pages 301

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <footer>
                <strong>
                 <small>
-                    <i class="fa-regular fa-copyright"></i> 2025-Presnt Frank Kam
+                    <a style="color: #333;" href="https://ic3dt3a.org/" target="_blank"><i class="fa-brands fa-github"></i> Source Code</small>
                 </small>
                </strong>
             </footer>
