--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <footer>
                <strong>
                 <small>
-                    <a style="color: #333;" href="https://ic3dt3a.org/" target="_blank"><i class="fa-brands fa-github"></i> Source Code</small>
+                    <a style="color: #333;" href="https://github.com/Frank-Kam/links target="_blank"><i class="fa-brands fa-github"></i> Source Code</small>
                 </small>
                </strong>
             </footer>
