--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <i class="fa-brands fa-instagram"></i>
                     ⠀Instagram
                 </a>
-                <a href="https://instagram.com/frankkam1214" target="_blank">
+                <a href="https://www.threads.net/@frankkam1214" target="_blank">
                     <i class="fa-brands fa-threads"></i>
                     ⠀Threads
                 </a>
