--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <body>
         <div class="container">
             <h1>
-                <img src="pfp.webp" alt="icon" class="icon"> Frank Links
+                <img src="pfp.webp" alt="icon" height="35" width="35" class="icon"> Frank Links
             </h1>
 
             <hr>
