--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="zh-Hant-TW">
     
     <head>
+        <link rel="preload" href="bk.webp" as="image">
         <link rel="preload"  as="style" href="/index.css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
