change bk foto and fix size

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="zh-Hant-TW">
     
     <head>
-        <link rel="preload" href="bk.webp" as="image">
-        <link rel="preload"  as="style" href="/index.css">
+        <link rel="preload" href="/bk.webp" as="image">
+        <link rel="preload" href="/index.css" as="style">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="preconnect" href="https://fonts.googleapis.com">
