change bk foto and fix size

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <link rel="preload" href="/bk.webp" as="image">
         <link rel="preload" href="/index.css" as="style">
+        <link rel="stylesheet" href="/index.css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,7 +14,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">    
         <link rel="stylesheet" href="/index.css">
 
-        <title>Frank Links</title>
+        <title>Frank</title>
        
         <link rel="apple-touch-icon" sizes="180x180" href="/pfp.webp" />
         <link rel="icon" type="image/webp" sizes="32x32" href="/pfp.webp" />
