--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">    
         <link rel="stylesheet" href="/index.css">
 
-        <title>Frank</title>
+        <title>Frank's Links</title>
        
         <link rel="apple-touch-icon" sizes="180x180" href="/pfp.webp" />
         <link rel="icon" type="image/webp" sizes="32x32" href="/pfp.webp" />
@@ -24,7 +24,7 @@
     <body>
         <div class="container">
             <h1>
-                Frank Links
+                Frank
             </h1>
 
             <hr>
