fix preconnect tag

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     
     <head>
         <link rel="preload" href="/bk.webp" as="image">
+        <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" as="style">
         <link rel="preload" href="/index.css" as="style">
         <link rel="stylesheet" href="/index.css">
         <meta charset="UTF-8">
