--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
                 <h2>
                     Other Links <i class="fa-solid fa-link"></i> :
                 </h2>
+                <a href="/public.key" download="frank's_gpg_public_key.asc">
+                    <i class="fa-solid fa-key"></i>
+                    ⠀My School Club
+                </a>
                 <a href="https://ctf.dypc.cc/" target="_blank">
                     <i class="fa-solid fa-school"></i>
                     ⠀My School Club
