--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 </h2>
                 <a href="/public.key" download="frank's_gpg_public_key.asc">
                     <i class="fa-solid fa-key"></i>
-                    ⠀My School Club
+                    ⠀GnuPG Public Key
                 </a>
                 <a href="https://ctf.dypc.cc/" target="_blank">
                     <i class="fa-solid fa-school"></i>
