--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link rel="preconnect" href="https://cdnjs.cloudflare.com">
+        <link rel="preconnect" href="https://open.spotify.com">
+        <link rel="preconnect" href="https://api.spotify.com">
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">    
@@ -70,6 +72,21 @@
                     <i class="fa-brands fa-github"></i>
                     ⠀GitHub
                 </a>
+            </div>
+            <div class="links">
+                <h2>
+                    <i class="fa-solid fa-headphones-simple"></i>
+                </h2>
+
+            <b>
+                <iframe src="https://open.spotify.com/embed/artist/4UK2Lzi6fBfUi9rpDt6cik?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>              
+            </b>
+            <b>
+                <iframe src="https://open.spotify.com/embed/track/03xgICnOSxctEs1gFdBoHB?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            </b>
+            <b>
+                <iframe src="https://open.spotify.com/embed/track/2Srwzgs6tbJDB4Sm8lUDI0?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            </b>
             </div>
             <div class="links">
                 <h2>
