--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
                 </h2>
 
             <b>
-                <iframe src="https://open.spotify.com/embed/artist/4UK2Lzi6fBfUi9rpDt6cik?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="eager"></iframe>              
+                <iframe src="https://open.spotify.com/embed/artist/4UK2Lzi6fBfUi9rpDt6cik?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="eager"></iframe>              
             </b>
             <b>
-                <iframe src="https://open.spotify.com/embed/track/03xgICnOSxctEs1gFdBoHB?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="eager"></iframe>
+                <iframe src="https://open.spotify.com/embed/track/03xgICnOSxctEs1gFdBoHB?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="eager"></iframe>
             </b>
             <b>
-                <iframe src="https://open.spotify.com/embed/track/2Srwzgs6tbJDB4Sm8lUDI0?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="eager"></iframe>
+                <iframe src="https://open.spotify.com/embed/track/2Srwzgs6tbJDB4Sm8lUDI0?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="eager"></iframe>
             </b>
             </div>
             <div class="links">
