--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </a>
                 </div>
                 <h2>
-                    Social Links <i class="fa-solid fa-link"></i> :
+                    Social <i class="fa-solid fa-link"></i> :
                 </h2>
                 <a href="https://instagram.com/frankkam1214" target="_blank">
                     <i class="fa-brands fa-instagram"></i>
@@ -90,7 +90,7 @@
             </div>
             <div class="links">
                 <h2>
-                    Other Links <i class="fa-solid fa-link"></i> :
+                    Others <i class="fa-solid fa-link"></i> :
                 </h2>
                 <a href="/public.key" download="frank's_gpg_public_key.asc">
                     <i class="fa-solid fa-key"></i>
