--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     ⠀Email
                 </a>
                 
-                <a href="https://frankk.uk/" target="_blank">
+                <a href="https://blog.frankk.uk/" target="_blank">
                     <i class="fa-solid fa-rss"></i>
                     ⠀Blog
                 </a>
