--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">    
         <link rel="stylesheet" href="/index.css">
-        <title>Frank's Links</title>
+        <title>Frank</title>
         <link rel="icon" type="image/webp" sizes="32x32" href="/pfp.webp" />
         <link rel="icon" type="image/webp" sizes="16x16" href="/pfp.webp" />
     </head>
