--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <h2>
                     Others <i class="fa-solid fa-link"></i> :
                 </h2>
-                <a href="/public.key" download="frank's_gpg_public_key.asc">
+                <a href="/public_key.txt" target="_blank">
                     <i class="fa-solid fa-key"></i>
                     ⠀GnuPG Public Key
                 </a>
