--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     ⠀Email
                 </a>
                 
-                <a href="https://blog.frankk.uk/" target="_blank">
+                <a href="https://blog.frankk.uk/?utm_source=linkt" target="_blank">
                     <i class="fa-solid fa-rss"></i>
                     ⠀Blog
                 </a>
@@ -99,7 +99,7 @@
                     <i class="fa-solid fa-school"></i>
                     ⠀My School Club
                 </a>
-                <a href="https://status.frankk.uk/" target="_blank">
+                <a href="https://status.frankk.uk/?utm_source=linkt" target="_blank">
                     <i class="fa-solid fa-signal"></i>
                     ⠀Status
                 </a>
